mehari/src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_del_opa1_csqs@3-193311180-GTCG-G.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: G
  consequences:
    - disruptive_inframe_deletion
  putative_impact: moderate
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 1
    total: 31
  hgvs_g: g.193311181_193311183del
  hgvs_n: n.185_187del
  hgvs_c: c.15_17del
  hgvs_p: p.Arg6del
  cdna_pos:
    ord: 185
    total: 6429
  cds_pos:
    ord: 15
    total: 3048
  protein_pos:
    ord: 6
    total: 1016
  distance: 0
  strand: 1
  messages: ~
