mehari/src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_csq@17-41197836-G-A.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: A
  consequences:
    - splice_polypyrimidine_tract_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - mane_select
    - ref_seq_select
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41197836G>A
  hgvs_n: n.5581-17C>T
  hgvs_c: c.5468-17C>T
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 17
  strand: -1
  messages: ~
